docs/api/qiskit/1.2/qiskit.qobj.PulseQobj.mdx
---
title: PulseQobj (v1.2)
description: API reference for qiskit.qobj.PulseQobj in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.PulseQobj
---

# PulseQobj

<Class id="qiskit.qobj.PulseQobj" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L591-L709" signature="qiskit.qobj.PulseQobj(qobj_id, config, experiments, header=None)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")

  A Pulse Qobj.

  Instantiate a new Pulse Qobj Object.

  Each Pulse Qobj object is used to represent a single payload that will be passed to a Qiskit provider. It mirrors the Qobj the published [Qobj specification](https://arxiv.org/abs/1809.03452) for Pulse experiments.

  <Admonition title="Deprecated since version 1.2" type="danger">
    The class `qiskit.qobj.pulse_qobj.PulseQobj` is deprecated as of qiskit 1.2. It will be removed in the 2.0 release. The Qobj class and related functionality are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires Qobj it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  *   **qobj\_id** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – An identifier for the qobj
  *   **config** ([*PulseQobjConfig*](qiskit.qobj.PulseQobjConfig "qiskit.qobj.PulseQobjConfig")) – A config for the entire run
  *   **header** ([*QobjHeader*](qiskit.qobj.QobjHeader "qiskit.qobj.QobjHeader")) – A header for the entire run
  *   **experiments** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")) – A list of lists of [`PulseQobjExperiment`](qiskit.qobj.PulseQobjExperiment "qiskit.qobj.PulseQobjExperiment") objects representing an experiment

  ## Methods

  ### from\_dict

  <Function id="qiskit.qobj.PulseQobj.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L680-L703" signature="from_dict(data)" modifiers="classmethod">
    Create a new PulseQobj object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) – A dictionary representing the PulseQobj to create. It will be in the same format as output by [`to_dict()`](#qiskit.qobj.PulseQobj.to_dict "qiskit.qobj.PulseQobj.to_dict").

    **Returns**

    The PulseQobj from the input dictionary.

    **Return type**

    [PulseQobj](#qiskit.qobj.PulseQobj "qiskit.qobj.PulseQobj")
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.PulseQobj.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L643-L678" signature="to_dict()">
    Return a dictionary format representation of the Pulse Qobj.

    Note this dict is not in the json wire format expected by IBMQ and qobj specification because complex numbers are still of type complex. Also this may contain native numpy arrays. When serializing this output for use with IBMQ you can leverage a json encoder that converts these as expected. For example:

    ```python
    import json
    import numpy

    class QobjEncoder(json.JSONEncoder):
        def default(self, obj):
            if isinstance(obj, numpy.ndarray):
                return obj.tolist()
            if isinstance(obj, complex):
                return (obj.real, obj.imag)
            return json.JSONEncoder.default(self, obj)

    json.dumps(qobj.to_dict(), cls=QobjEncoder)
    ```

    **Returns**

    A dictionary representation of the PulseQobj object

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")
  </Function>
</Class>

